--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "md5-js": "^0.0.3",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
