--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "image-size": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "md5-js": "^0.0.3",
     "sharp": "^0.33.4",
