--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./backend/app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
